Utworzono za pomocą Colab

--- a/Praca_zaliczeniowa_Analiza_Danych_w_Biznesie.ipynb
+++ b/Praca_zaliczeniowa_Analiza_Danych_w_Biznesie.ipynb
@@ -15797,7 +15797,7 @@
         "id": "OO0dH11kMYCq"
       },
       "source": [
-        "# Czyszczenie danych"
+        "# 5 Czyszczenie danych"
       ]
     },
     {
@@ -15842,7 +15842,7 @@
         "id": "RTa__qc1md_8"
       },
       "source": [
-        "# Tworzenie zmiennych syntetycznych"
+        "# 6 Tworzenie zmiennych syntetycznych"
       ]
     },
     {
@@ -16700,7 +16700,7 @@
         "id": "5oITfSnBKIRK"
       },
       "source": [
-        "# Wstępna wizualizacja danych"
+        "# 6 Wstępna wizualizacja danych"
       ]
     },
     {
@@ -16727,11 +16727,14 @@
       "collapsed_sections": [
         "HQ5Acbfjlr0M",
         "R735nBG2lu9y",
-        "SiInhM8rsb2X"
+        "Pwe4xYcQmRWK",
+        "SiInhM8rsb2X",
+        "MNlYMtJtMsQm",
+        "RTa__qc1md_8"
       ],
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPHqjDsVRNL8PHMJdjzU2tG",
+      "authorship_tag": "ABX9TyMaodngOjKpEU0ZV8ygcHSH",
       "include_colab_link": true
     },
     "kernelspec": {
